# tensory

./: Cargo.toml  README.md  develop.ai.md  develop.md  flake.nix
.cargo/: config.toml
dyload-test/: Cargo.toml
dyload-test/src/: main.rs
examples/: Cargo.toml  dmrg.rs  ideal.rs  trg.rs  usage.rs
examples/algorithms/: Cargo.toml
examples/ideal/: Cargo.toml
examples/ideal/src/: main.rs
examples/usage/: Cargo.toml
examples/usage/src/: main.rs
experiments/dyload/: Cargo.toml
experiments/dyload/src/: blas.rs  main.rs
experiments/ndarray/: Cargo.toml  build.rs  svd.mkl-iomp.out  svd.mkl-iomp.zetta.out  svd.mkl-seq.out  svd.mkl-seq.zetta.out  svd.netlib.out  svd.openblas.out  svd.openblas.zetta.out  svd.out.accel  svd.r.out
experiments/numpy/: pyproject.toml  svd.out.accel  svd.py
lin-dev-deps/: Cargo.toml  build.rs
lin-dev-deps-build/: Cargo.toml
lin-dev-deps-build/src/: lib.rs
src/: lib.rs
src/basic/: leg.rs  mod.rs
src/core/: error.rs  mod.rs  tensor.rs  tensor_repr.rs
src/nd_dense/: mod.rs
src/nd_dense/tenalg/: convert.rs  error.rs  mod.rs
tensory-basic/: Cargo.toml
tensory-basic/src/: broker.rs  id.rs  lib.rs  mapper.rs
tensory-core/: Cargo.toml
tensory-core/src/: args.rs  bound_tensor.rs  container.rs  lib.rs  mapper.rs  port.rs  prelude.rs  repr.rs  task.rs  tensor.rs  tensor_with_runtime.rs  veccy.rs
tensory-core/src/arith/: add.rs  assign.rs  conj.rs  contr.rs  mod.rs  mul.rs  neg.rs  scalar_div.rs  scalar_mul.rs  sub.rs
tensory-core/src/ops/: axis_info.rs  contr.rs  elem_get.rs  index.rs  mod.rs
tensory-core/src/tensor/: broker.rs  leg.rs  mod.rs  repr.rs  tensor.rs  tensor_with_executor.rs  tensor_with_runtime.rs
tensory-core/src/utils/: axis_info.rs  elem_get.rs  ewise.rs  mod.rs
tensory-linalg/: Cargo.toml
tensory-linalg/src/: conj.rs  eig.rs  eigen.rs  exp.rs  lib.rs  norm.rs  pow.rs  qr.rs  solve_eig.rs  svd.rs
tensory-ndarray/: Cargo.toml  build.rs
tensory-ndarray/src/: arith.rs  lib.rs  linalg.rs  regulated.rs
tensory-ndarray/src/tenalg/: convert.rs  cut_filter.rs  error.rs  mod.rs
tensory-normalized/: Cargo.toml
tensory-normalized/src/: lib.rs
tensory-regulated/: Cargo.toml
tensory-regulated/src/: arith.rs  lib.rs  linalg.rs  utils.rs
tensory-regulated/tests/: lib_test.rs
