[package]
name = "lin-dev-deps"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

links = "linalg-backend"

[dependencies]
blas-src = { workspace = true, features = [
    "openblas"
    # "accelerate"
    # "intel-mkl"
] }

# openblas-src = { workspace = true, features = ["cblas"] }
# intel-mkl-src = { version = "0.8.1" ,features = ["dynamic","lp64","iomp"] }
