[package]
name = "lin-dev-deps"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

links = "linalg-backend"

[dependencies]
blas-src = { workspace = true, features = [ "openblas" ] }
openblas-src = { workspace = true }

# blas-src = { workspace = true, features = [ "accelerate" ] }
# accelerate-src is not needed since no option

# blas-src = { workspace = true, features = [ "intel-mkl" ] }
# intel-mkl-src = { version = "0.8.1" ,features = ["dynamic","lp64","iomp"] }
