[package]
name = "tensory-basic"
version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tensory-core = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
bimap = { workspace = true }
thiserror = { workspace = true }
