[package]
name = "tensory-ndarray"
version = { workspace=true }
repository = { workspace=true }
authors = { workspace=true }
license = { workspace=true }
edition = { workspace=true }

[dependencies]
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
blas-src = { workspace = true, features = ["accelerate"] }
openblas-src = { workspace = true, features = ["cblas"] }
num-traits = { workspace = true }
tensory-core = { workspace = true }
tensory-linalg = { workspace = true }

rand = { workspace = true }
itertools = { workspace = true }


[dev-dependencies]
tensory-basic = { workspace = true }
num-complex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
