[package]
name = "tensory-ndarray"
version = { workspace=true }
repository = { workspace=true }
authors = { workspace=true }
license = { workspace=true }
edition = { workspace=true }

[dependencies]
ndarray = { workspace = true, features = ["blas"] }
ndarray-linalg = { workspace = true, features = ["blas"] }
blas-src = { workspace = true }
num-traits = { workspace = true }
tensory-core = { workspace = true }
tensory-linalg = { workspace = true }

rand = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tensory-basic = { workspace = true }
num-complex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
lin-dev-deps = { workspace = true }
