[package]
name = "tensory-normalized"
version = { workspace=true }
repository = { workspace=true }
authors = { workspace=true }
license = { workspace=true }
edition = { workspace=true }

[dependencies]
tensory-core = { workspace = true }
tensory-linalg = { workspace = true }

[dev-dependencies]
tensory-basic = { workspace = true }
tensory-ndarray = { workspace = true }
num-complex = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
ndarray-linalg = { workspace = true }
