[package]
name = "tensory-regulated"
version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tensory-core = { workspace = true }
tensory-linalg = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
tensory-basic = { workspace = true }
tensory-ndarray = { workspace = true }
num-complex = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
lin-dev-deps = { workspace = true }
