[package]
name = "ideal"
version = { workspace=true }
edition = { workspace=true }

[dependencies]
tensory-core = { workspace = true }
tensory-basic = { workspace = true }
tensory-linalg = { workspace = true }
tensory-ndarray = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
num-complex = { workspace = true }
