[package]
name = "usage"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tensory-core = { workspace = true }
tensory-basic = { workspace = true }
tensory-linalg = { workspace = true }
tensory-ndarray = { workspace = true }
lin-dev-deps = { workspace = true }
ndarray = { workspace = true }

anyhow = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
itertools = { workspace = true }

[build-dependencies]
lin-dev-deps-build = { workspace = true }
