[package]
name = "ndarray-performance-test"
version = { workspace=true }
edition = { workspace=true }


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
num-complex = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
blas-src = { workspace = true, features = ["accelerate"] }
openblas-src = { workspace = true, features = ["cblas"] }

