[package]
name = "ndarray-performance-test"
version = { workspace=true }
edition = { workspace=true }


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
num-complex = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
blas-src = { workspace = true }
num-traits = { workspace = true }
lin-dev-deps = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[build-dependencies]
lin-dev-deps-build = { workspace = true }
